--- a/test-project/src/assets/css/common/_board.scss
+++ b/test-project/src/assets/css/common/_board.scss
@@ -143,4 +143,27 @@
 			}
 		}
 	}
+
+	.no-data{
+		padding:100px 0;
+		border-top:2px solid #333;
+		border-bottom:2px solid #333;
+		text-align:center;
+		&:before{
+			display:block;
+			content:'!';
+			width:100px;
+			height:100px;
+			margin:0 auto 20px;
+			border:1px solid #333;
+			color:#333;
+			border-radius:100%;
+			text-align:center;
+			font-size:50px;
+			line-height:100px;
+		}
+	}
+	td.no-data{
+		border:0;
+	}
 }
